--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div style="height:100vh" class="col-12 d-flex justify-content-center align-items-center">
         <p>
-          <b>¡Hola mundo!</b>
+          <b>Hello world!</b>
         </p>
       </div>
     </div>
