--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,13 @@
 <body>
   <section class="container">
     <div class="row">
-      <div style="height:100vh" class="col-12 d-flex justify-content-center align-items-center">
+      <div style="height:90vh" class="col-12 d-flex justify-content-center align-items-center">
         <p>
           <b>Hello world!</b>
         </p>
+      </div>
+      <div style="height:10vh" class="col-12 d-flex justify-content-center align-items-center">
+        <pre>0.0.1</pre>
       </div>
     </div>
   </section>
