config development environment

--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>En construcción</title>
-  <link rel="stylesheet" href="./css/bootstrap-reboot.css">
-  <link rel="stylesheet" href="./css/bootstrap-grid.css">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-
-<body>
-  <section class="container">
-    <div class="row">
-      <div style="height:90vh" class="col-12 d-flex justify-content-center align-items-center">
-        <p>
-          <b>Hello world!</b>
-        </p>
-      </div>
-      <div style="height:10vh" class="col-12 d-flex justify-content-center align-items-center">
-        <pre>0.0.1</pre>
-      </div>
-    </div>
-  </section>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="es"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>En construcción</title><link rel="stylesheet" href="./styles/app.css"></head><body><section class="container"><div class="row"><div class="col-12 d-flex justify-content-center align-items-center" style="height:100vh"><p><b>Hello world!</b></p></div></div></section></body></html>
